--- a/views/components/navbar.ejs
+++ b/views/components/navbar.ejs
@@ -6,9 +6,10 @@
         Courses <sup>Edu</sup> Cambridge</a
       >
 
-      <form class="d-flex" role="search">
+      <form class="d-flex" role="search" action='/search' method='post'>
         <input
           class="form-control me-2"
+          name="search"
           type="search"
           placeholder="Search"
           aria-label="Search"
